# trex-subxt

./: Cargo.toml  README.md  metadata.scale
src/: main.rs  utils.rs
