[package]
name = "trex-subxt"
version = "0.1.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.24.0"
tracing-subscriber = "0.3.11"
sp-keyring = "6.0.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }

log = '0.4.8'
clap = {version = "4.0.0", features = ["derive"]}
serde = { version = "1.0", features = ["derive", "alloc"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_yaml = "0.9.14"
aes-gcm = "0.10.1"
sha2 = "0.10.2"

sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_crypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
